--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -20,6 +20,8 @@ jobs:
           rm -rf chatbot-frontend-12
           git clone https://${{ secrets.USER_NAME }}:${{ secrets.USER_TOKEN }}@github.com/dineshpabbi10/chatbot-frontend-12.git
           cd chatbot-frontend-12
+          echo "INSTALLING PROJECT DEPENDENCIES"
           npm install
+          echo "INSTALLING ANGULAR CLI"
           npm install -g @angular/cli 
           ng build
