--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -16,3 +16,7 @@ jobs:
         script: |
           whoami
           ls -al
+          cd /var/www/html
+          git clone https://github.com/dineshpabbi10/chatbot-frontend-12.git
+          npm install
+          ng build
