add logic to move files out of chatbot folder

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,3 +24,6 @@ jobs:
           npm install
           npm install -g @angular/cli 
           ng build
+          mv  -v ./dist/chatbot-frontend/* ../../
+          cd ../../
+          rm -rf chatbot-frontend-12
