--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -7,24 +7,33 @@ jobs:
   deploy-front-end:
     runs-on: ubuntu-latest
     steps:
-    - name: Use ssh action to run linux commands
-      uses: appleboy/ssh-action@master
+    - name: checkout Repository
+      - uses: actions/checkout@v2
+
+    - name: setup node 14
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'npm'
+    
+    - name: install node dependencies
+      - run: |
+          npm install
+          npm test
+          npm install -g @angular/cli
+    
+    - name: generate production build
+      - run: |
+          ng build
+
+    - name: copy file via ssh password
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         timeout: 600s
+        rm: true
         command_timeout: 20m
-        script: |
-          ls -al
-          cd /var/www/html
-          rm -rf chatbot-frontend-12
-          git clone https://${{ secrets.USER_NAME }}:${{ secrets.USER_TOKEN }}@github.com/dineshpabbi10/chatbot-frontend-12.git
-          cd chatbot-frontend-12
-          npm install
-          npm install -g @angular/cli 
-          ng build
-          mv  -v ./dist/chatbot-frontend/* ../../
-          cd ../../
-          rm -rf chatbot-frontend-12
-          ls -al
+        source: "dist/*"
+        target: "/var/www/html"
