--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,7 +24,7 @@ jobs:
           npm install
           npm install -g @angular/cli 
           ng build
-          mv  -v ./dist/chatbot-frontend/* ../../
-          cd ../../
+          mv  -v ./dist/chatbot-frontend/ ../
+          cd ../
           rm -rf chatbot-frontend-12
           ls -al
