--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -12,19 +12,19 @@ jobs:
 
     - name: setup node 14
       uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-          cache: 'npm'
+      with:
+        node-version: '14'
+        cache: 'npm'
     
     - name: install node dependencies
-      - run: |
-          npm install
-          npm test
-          npm install -g @angular/cli
+      run: |
+        npm install
+        npm test
+        npm install -g @angular/cli
     
     - name: generate production build
-      - run: |
-          ng build
+      run: |
+        ng build
 
     - name: copy file via ssh password
       uses: appleboy/scp-action@master
