--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,6 +24,10 @@ jobs:
     - name: generate production build
       run: |
         ng build
+        
+    - name: move to production build folder
+      run : |
+        cd ./dist/chatbot-frontend/
 
     - name: copy file via ssh password
       uses: appleboy/scp-action@master
@@ -32,6 +36,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         timeout: 600s
+        rm: true
         command_timeout: 20m
-        source: "./dist/chatbot-frontend/*"
+        source: "*"
         target: "/var/www/html"
