--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -28,15 +28,13 @@ jobs:
     - name: move to production build folder
       run : |
         cd ./dist/chatbot-frontend/
+    
+    - name: install sshpass
+      run: |
+        sudo apt-get update -y
+        sudo apt-get install -y sshpass
 
-    - name: copy file via ssh password
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        timeout: 600s
-        rm: true
-        command_timeout: 20m
-        source: "*"
-        target: "/var/www/html"
+    - name: upload files
+      run : |
+        sshpass -p ${{ secrets.PASSWORD }} scp * ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/var/www/html
+        echo "Upload Successfull"
