--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -29,11 +29,15 @@ jobs:
       run : |
         cat package.json
     
-    - name: install sshpass
-      run: |
-        sudo apt-get update -y
-        sudo apt-get install -y sshpass
-
-    - name: upload files
-      run : |
-        sshpass -p ${{ secrets.PASSWORD }} scp -r ./dist/chatbot-frontend/* ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/var/www/html
+    - name: copy file via ssh password
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        timeout: 600s
+        rm: true
+        command_timeout: 20m
+        source: "./dist/chatbot-frontend/*"
+        target: "/var/www/html"
+        strip_components: 2
