--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.15",
+    "@angular/animations": "^12.2.16",
     "@angular/cdk": "^13.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/platform-server": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/core": "^12.2.16",
+    "@angular/forms": "^12.2.16",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/platform-server": "^12.2.16",
+    "@angular/router": "^12.2.16",
     "@nguniversal/express-engine": "12.1.3",
     "express": "^4.15.2",
-    "ng-multiselect-dropdown": "^0.3.7",
+    "ng-multiselect-dropdown": "^0.3.8",
+    "ng-recaptcha": "^9.0.0",
     "ngx-toastr": "^14.2.1",
     "ngx-ui-loader": "^11.0.0",
     "primeicons": "^5.0.0",
@@ -38,13 +39,13 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.14",
     "@angular/cli": "~12.2.14",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular/compiler-cli": "^12.2.16",
     "@nguniversal/builders": "^12.1.3",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.12",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
