--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^12.2.16",
     "@nguniversal/express-engine": "12.1.3",
     "express": "^4.15.2",
+    "localstorage-polyfill": "^1.0.1",
     "ng-multiselect-dropdown": "^0.3.8",
     "ng-recaptcha": "^9.0.0",
     "ngx-toastr": "^14.2.1",
