--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@angular/platform-server": "^12.2.16",
     "@angular/router": "^12.2.16",
     "@nguniversal/express-engine": "12.1.3",
+    "@types/stripe-v3": "^3.1.26",
     "express": "^4.15.2",
     "localstorage-polyfill": "^1.0.1",
     "ng-multiselect-dropdown": "^0.3.8",
     "ng-recaptcha": "^9.0.0",
+    "ngx-stripe": "^13.0.0",
     "ngx-toastr": "^14.2.1",
     "ngx-ui-loader": "^11.0.0",
     "primeicons": "^5.0.0",
