--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/common": "^12.2.16",
     "@angular/compiler": "^12.2.16",
     "@angular/core": "^12.2.16",
+    "@angular/fire": "^7.2.1",
     "@angular/forms": "^12.2.16",
     "@angular/platform-browser": "^12.2.16",
     "@angular/platform-browser-dynamic": "^12.2.16",
@@ -26,6 +27,7 @@
     "@angular/router": "^12.2.16",
     "@nguniversal/express-engine": "12.1.3",
     "express": "^4.15.2",
+    "firebase": "^9.6.8",
     "localstorage-polyfill": "^1.0.1",
     "ng-multiselect-dropdown": "^0.3.8",
     "ng-recaptcha": "^9.0.0",
