--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-server": "^12.2.16",
     "@angular/router": "^12.2.16",
     "@nguniversal/express-engine": "12.1.3",
+    "@stripe/stripe-js": "^1.24.0",
     "@types/stripe-v3": "^3.1.26",
     "express": "^4.15.2",
     "firebase": "^9.6.8",
