--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "material-icons": "^1.10.8",
     "ng-multiselect-dropdown": "^0.3.8",
     "ng-recaptcha": "^9.0.0",
+    "ngx-paypal": "^9.0.0",
     "ngx-stripe": "^13.0.0",
     "ngx-toastr": "^14.2.2",
     "ngx-ui-loader": "^11.0.0",
