--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nguniversal/express-engine": "12.1.3",
     "@stripe/stripe-js": "^1.24.0",
     "@types/stripe-v3": "^3.1.26",
+    "chart.js": "^3.7.1",
     "express": "^4.17.3",
     "geoip-lite": "^1.4.4",
     "localstorage-polyfill": "^1.0.1",
