--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^12.2.16",
     "@nguniversal/express-engine": "12.1.3",
     "@stripe/stripe-js": "^1.24.0",
+    "@types/chart.js": "^2.9.36",
     "@types/stripe-v3": "^3.1.26",
     "chart.js": "^3.7.1",
     "express": "^4.15.2",
